# claudash

./: .gitignore  ARCH.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  release-please-config.json
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-please.yml  release.yml
commands/: setup.md
src/: credentials.rs  daily_cost.rs  display.rs  main.rs  profile.rs  status.rs  types.rs  usage.rs
src/tests/: mod.rs
